<resources>
    <string name="app_name">TAUcoin</string>
    <string name="common_loading">loading&#8230;</string>
    <string name="common_no_login">Visitor</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_ok">OK</string>
    <string name="common_done">Done</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_continue">Continue</string>
    <string name="common_balance" formatted="false"><Data><![CDATA[<font color="#f19322">%s</font>&nbsp;TAU]]> </Data></string>
    <string name="common_exit" formatted="false">Do you want to stop mining?</string>
    <string name="common_balance_unit">TAU</string>
    <string name="common_zero_unit">0.00 TAU</string>
    <string name="common_zero">0</string>
    <string name="common_percentage_zero">0%</string>
    <string name="common_percentage">&#37;</string>
    <string name="common_refresh_failed">Refresh Failed</string>
    <string name="common_see_more">Click to see more</string>
    <string name="common_install_browser">Please install mobile browser first!</string>
    <string name="common_wifi_disconnected">WIFI connection time out</string>
    <string name="home_no_point">No.%s</string>
    <string name="home_total_blocks">Total blocks %s</string>
    <string name="splash_title">TAU mWallet %s</string>
    <string name="splash_subheading">Mobile Mining Wallet</string>
    <string name="splash_describe">Mobile &#038; Decentral\nProof of Transaction\nMining consumes 5 MB data per day</string>
    <string name="main_home">Home</string>
    <string name="main_send_receive">Send &#38; Receive</string>
    <string name="main_manage">Manage</string>
    <string name="main_home_title">TAUcoin.io - Mobile Mining Wallet</string>
    <string name="main_exit">Click again to exit the application!</string>
    <string name="main_congratulation">Congratulation!</string>
    <string name="main_congratulation_msg">You\'ve successfully mined %s blocks, and %s TAU in the last %s hours!</string>
    <string name="tx_increase">Increase Power</string>
    <string name="tx_send">Send</string>
    <string name="tx_manager_address">Manage Addresses</string>
    <string name="tx_receive">Receive</string>
    <string name="tx_log">Transactions</string>
    <string name="tx_log_empty">No records</string>
    <string name="tx_to_address">To Address</string>
    <string name="tx_from_address">From Address</string>
    <string name="tx_transaction_id">Transaction ID</string>
    <string name="tx_transaction_expiry">Transaction Expiry</string>
    <string name="tx_transaction_fee">Transaction Fee</string>
    <string name="tx_transaction_median_fee">Transaction Median Fee</string>
    <string name="tx_log_tips">
        &#160;Red font indicates a failed transaction,\n
        Blue font indicates a pending transaction,\n
        Black font indicates a successful transaction;\n
        \'+\' represents income,\n
        \'-\' represents payout
    </string>
    <string name="tx_hash_copy">TX hash copied</string>
    <string name="tx_address_copy">Address copied</string>
    <string name="tx_id_copy">Transaction ID copied</string>
    <string name="manager_version">version %s</string>
    <string name="manager_keys">Keys</string>
    <string name="manager_setting">Settings</string>
    <string name="manager_help">Help</string>
    <string name="manager_p2p_exchange">P2P &#38; Non&#045;KYC Exchange</string>
    <string name="manager_mining_group">Mining Group</string>
    <string name="manager_upcoming_feature">Upcoming feature: IPFS native integration, Serverless Wallet, Sharding as Mining.</string>
    <string name="send_receiver_address">Receiver\'s Address</string>
    <string name="send_amount">Amount</string>
    <string name="send_budget">Budget</string>
    <string name="send_budget_hint">Amount for increasing power</string>
    <string name="send_amount_increase">Budget:</string>
    <string name="send_memo">Memo</string>
    <string name="send_status">Status</string>
    <string name="send_tx_fee_tip">The higher fee, the faster trx processing.</string>
    <string name="send_transaction_expiry" formatted="false"><Data><![CDATA[Transaction expires in <font color="#0E88EF">%s</font> (≈%s minutes) blocks.]]> </Data></string>
    <string name="send_to">To</string>
    <string name="send_dialog_yes">Proceed</string>
    <string name="send_dialog_no">Back</string>
    <string name="send_tx_success">Transaction sent</string>
    <string name="send_txs_sending">Transaction in progress</string>
    <string name="send_tx_network_error">Error in network, send failed</string>
    <string name="send_tx_address">Receiver&#160;Address:&#160;%s</string>
    <string name="send_tx_increase_tip">Get more transaction number and mining power. Wallet automatically makes transaction under your Budget.</string>
    <string name="send_tx_increase_address">To:&#160;%s</string>
    <string name="send_tx_small_fee">0.01</string>
    <string name="send_tx_total_amount">Total:&#160;%s&#160;TAU</string>
    <string name="send_tx_budget_amount" formatted="false"><Data><![CDATA[Total:&nbsp;<font color="#f19322">%s</font>&nbsp;(Including each transaction fee)]]></Data></string>
    <string name="send_tx_invalid_address">Invalid Address</string>
    <string name="send_tx_invalid_amount">Invalid Amount</string>
    <string name="send_tx_invalid_budget">Invalid Budget</string>
    <string name="send_tx_invalid_budget_no_enough">Invalid Budget :\nBudget &#060; Transaction Fee</string>
    <string name="send_tx_invalid_fee">Invalid Transaction Fee</string>
    <string name="send_no_enough_coins">Insufficient Balance :\nAmount + Transaction Fee >= Balance</string>
    <string name="send_no_enough_coins_budget">Insufficient Balance :\nBudget > Balance</string>
    <string name="send_amount_too_low">Transaction amount is too low</string>
    <string name="send_budget_too_low">Transaction budget is too low</string>
    <string name="send_fee_too_low">Transaction fee is too low</string>
    <string name="send_fee_upper_limit">Transaction fees should not exceed %s TAU</string>
    <string name="send_budget_in_pool">TAU kindly remind you. There already has an increase power transaction in the pool. Sending frequently may increase the failure rate of the transaction.</string>
    <string name="send_tx_status_pending">In processing, expected to confirm in 5 minutes.</string>
    <string name="send_tx_status_success">Successfully</string>
    <string name="send_tx_status_expired">Failed, transaction expired.</string>
    <string name="send_tx_illegal">Failed, illegal transaction.</string>
    <string name="send_tx_insufficient_fee">Failed, insufficient transaction fee</string>
    <string name="send_tx_verify_signature">Failed, unable to verify signature</string>
    <string name="send_tx_insufficient_balance">Failed, insufficient balance</string>
    <string name="send_tx_illegal_version">Failed, illegal transaction version</string>
    <string name="send_tx_illegal_option">Failed, illegal transaction option</string>
    <string name="send_tx_illegal_expiry">Failed, illegal transaction expiry</string>
    <string name="send_tx_illegal_time">Failed, illegal transaction time</string>
    <string name="send_tx_illegal_sender">Burning address can not send coins</string>
    <string name="send_tx_unknown_error">Failed, network error, please try it again</string>
    <string name="keys_dialog_title">Please make sure your\nprivate key has been saved</string>
    <string name="keys_address">Address</string>
    <string name="keys_public_key">Public Key</string>
    <string name="keys_private_key">Private Key</string>
    <string name="keys_import_key">Import New Key</string>
    <string name="keys_import">Import</string>
    <string name="keys_generate">Generate New Private Key</string>
    <string name="keys_how_import">How to import my private key?</string>
    <string name="keys_paste_tip">Paste private key here</string>
    <string name="keys_address_copy">Address copied</string>
    <string name="keys_public_copy">Public Key copied</string>
    <string name="keys_private_copy">Private Key copied</string>
    <string name="keys_private_invalid">Invalid private key</string>
    <string name="profile_avatar">Avatar</string>
    <string name="profile_name">Name</string>
    <string name="profile_title">Profile</string>
    <string name="profile_select_photo">Choose from Album</string>
    <string name="profile_take_photo">Take Photo</string>
    <string name="profile_dialog_name">Please enter the name</string>
    <string name="app_upgrade_progress">Updating progress&#8230;</string>
    <string name="app_upgrade_title">Update Log</string>
    <string name="app_upgrade_install">Install</string>
    <string name="app_upgrade_fail">Failed</string>
    <string name="app_upgrade_retry">Retry</string>
    <string name="app_upgrade_latest">latest version</string>
    <string name="permission_tip_upgrade_denied">
         Please enable storage rights for TAUcoin, it is disabled.
    </string>
    <string name="permission_tip_upgrade_never_ask_again">
        Please enable storage rights for TAUcoin, it is forbidden now.
    </string>
    <string name="permission_install_unknown_apk_note">
        Please allow installation of TAUcoin.
    </string>
    <string name="home_mining_balance">Balance</string>
    <string name="home_mining_power">Mining\nPower</string>
    <string name="home_mining_rate">Mining&#160;Rate(Log)</string>
    <string name="home_mining_sync">Synced</string>
    <string name="home_mining">Mining</string>
    <string name="home_download">Download</string>
    <string name="home_full_data">Full&#160;Data:&#160;%sM</string>
    <string name="home_verify">Verify</string>
    <string name="home_sync_tip">Synchronizing</string>
    <string name="home_on">On</string>
    <string name="home_off">Off</string>
    <string name="home_mining_dashboard">Mining Dashboard</string>
    <string name="home_mining_rank">Mining Rank</string>
    <string name="home_wifi_only">Wifi Only</string>
    <string name="block_mining_income">Total Transaction Fee</string>
    <string name="block_miner">Miner</string>
    <string name="block_total_transaction">Total Transaction</string>
    <string name="setting_title">Settings</string>
    <string name="setting_address_book">Address Book</string>
    <string name="setting_transaction_expiry">Transaction Expiry</string>
    <string name="setting_reset_data">Restart Verify</string>
    <string name="main_de_fi">DeFi</string>
    <string name="de_fi_coming_soon">Coming Soon</string>
    <string name="de_fi_long_crypto">Project Long Crypto</string>
    <string name="de_fi_content">As a coin project, making wealth for community is essential. Therefore,
        just like famous project DAI, we will enable TAU community to be a decentral autonomous organization(DAO)
        managing a DeFi(decentral finance) project, called “Long Crypto”. Through open and on-chain smart contracts
        and transparent data, Long Crypto will borrow stable coins from general public. We use stable coins like USDT
        to buy and hold ETH to achieve long term asset growth. The supplier interests will automatically adjust from 10%
        - 99% annually. They can withdraw investments at any moment when liquidity allowes. In long term, stable coin suppliers
        will always make money. As DAO member, TAU coin holder will get the profit from smart contract and vote key decisions proportionally.
        TAU team is a group of programmers, who want to combine technology and finance together to serve TAU community.</string>
    <string name="de_fi_range">* Citizens and Residents of United States, European Union and China shall not invest Long Crypto project.</string>
    <string name="de_fi_telegram_group">Long Crypto Telegram Group</string>
</resources>