<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical">

    <io.taucoin.android.wallet.widget.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftBackImage="@mipmap/icon_close"
        app:leftImagePadding="0dp"
        app:titleText="@string/main_manage" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_nick"
                    style="@style/style_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dimen_size_32"
                    android:gravity="center_horizontal"
                    android:textColorHint="@color/color_grey"
                    android:hint="@string/common_no_login" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_below="@id/tv_nick"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_version"
                        style="@style/style_middle_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginEnd="5dp"
                        android:text=""
                        android:background="@drawable/shape_corner_white_border"/>

                    <TextView
                        android:visibility="visible"
                        android:id="@+id/version_upgrade"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="2dp"
                        android:background="@drawable/selector_oval_point" />

                </FrameLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:background="@color/color_main_line"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:layout_height="wrap_content">

                <io.taucoin.android.wallet.widget.ItemLineView
                    android:id="@+id/item_keys"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:leftImage="@mipmap/icon_key"
                    app:rightText="@string/manager_keys"
                    app:rightTextColor="@color/color_yellow" />

                <io.taucoin.android.wallet.widget.ItemLineView
                    android:id="@+id/item_address_book"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    app:leftImage="@mipmap/icon_address_book"
                    app:rightText="@string/setting_address_book"
                    app:rightTextColor="@color/color_black" />

                <RelativeLayout
                    android:background="@color/color_white"
                    android:layout_marginTop="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <io.taucoin.android.wallet.widget.ItemTextView
                        android:id="@+id/item_transaction_expiry"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="45dp"
                        android:paddingEnd="0dp"
                        app:itemRightImage="@mipmap/icon_arrow"
                        app:itemRightTextColor="@color/color_black"
                        app:itemLeftTextColor="@color/color_black"
                        app:itemLeftText="@string/setting_transaction_expiry" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="30dp"
                        android:contentDescription="@null"
                        android:src="@mipmap/icon_trans_expiry"
                        android:layout_marginTop="1dp" />
                </RelativeLayout>

                <io.taucoin.android.wallet.widget.ItemLineView
                    android:id="@+id/item_reset_data"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    app:leftImage="@mipmap/icon_setting"
                    app:rightText="@string/setting_reset_data"
                    app:rightTextColor="@color/color_black" />

                <io.taucoin.android.wallet.widget.ItemLineView
                    android:id="@+id/item_help"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    app:leftImage="@mipmap/icon_help"
                    app:rightText="@string/manager_help"
                    app:rightTextColor="@color/color_black" />

                <io.taucoin.android.wallet.widget.ItemLineView
                    android:id="@+id/item_p2p_exchange"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    app:leftImage="@mipmap/icon_p2p_exchange"
                    app:rightText="@string/manager_p2p_exchange"
                    app:rightTextColor="@color/color_black" />

                <io.taucoin.android.wallet.widget.ItemLineView
                    android:id="@+id/item_mining_group"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="1dp"
                    app:leftImage="@mipmap/icon_mining_group"
                    app:rightText="@string/manager_mining_group"
                    app:rightTextColor="@color/color_black" />

            </LinearLayout>

            <TextView
                style="@style/style_normal_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/manager_upcoming_feature"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>